Half maybe works, ugly still